--- a/example.page
+++ b/example.page
@@ -31,243 +31,46 @@ Sample Visualforce page for Force.com JavaScript REST Toolkit
         <title>
             Force.com JavaScript REST Toolkit
         </title>
-        <style type="text/css">
-            body {
-                font-family:"Arial";
-            }
-            table.main {
-                border: 1px solid #666;
-            }
-            .highlighted {
-                background-color:#D6EDFC;
-            }
-            .odd {
-                background-color:#fea;
-            }
-            form {
-                margin-bottom: 1em;
-            }
-            .ui-autocomplete-loading { 
-                background: white url('{!URLFOR($Resource.static, 'static/ajax.gif')}') right center no-repeat; 
-            }
-        </style>
         <!--
-        Download jQuery, jQuery UI and Trimpath Template, and put them in a
-        static resource bundles!
+        You will need to download jQuery, jQuery UI and Trimpath Template, 
+		and put them in a static resource bundle!
         -->
+        <apex:stylesheet value="{!URLFOR($Resource.sample, '/style.css')}"  />
         <apex:stylesheet value="{!URLFOR($Resource.static, '/static/jquery-ui.css')}"  />
         <apex:includeScript value="{!URLFOR($Resource.static, '/static/jquery.js')}"  />
         <apex:includeScript value="{!URLFOR($Resource.static, '/static/jquery-ui.js')}"  />
         <apex:includeScript value="{!URLFOR($Resource.static, '/static/template.js')}"  />
-        <apex:includeScript value="{!URLFOR($Resource.forcetk, '/forcetk.js')}"  />
-        
-        <script type="text/javascript">
-// Get a reference to jQuery that we can work with
-$j = jQuery.noConflict();
+        <apex:includeScript value="{!URLFOR($Resource.sample, '/forcetk.js')}"  />
+        <apex:includeScript value="{!URLFOR($Resource.sample, '/app.js')}"  />      
+  		<script type="text/javascript">
+		/*
+		 * This is the Visualforce-specific JavaScript code for our sample app.
+		 * It must go in the VF page so that merge variables are processed.
+		 */
 
-// Make our own startsWith utility fn
-String.prototype.startsWith = function(str){
-    return (this.substr(0, str.length) === str);
-}
+		// Get a reference to jQuery that we can work with
+		$j = jQuery.noConflict();
 
-// Get an instance of the REST API client
-var client = new forcetk.Client('{!$Api.Session_ID}');
+		// Get an instance of the REST API client
+		var client = new forcetk.Client('{!$Api.Session_ID}');
 
-// We'll use this a lot :-)
-var ajaxgif = "<img src='{!URLFOR($Resource.static, 'static/ajax.gif')}'/>";
+		var ajaxgif = "<img src='{!URLFOR($Resource.sample, '/ajax.gif')}' />";
 
-var $dialog = null;
+		var $dialog = null;
 
-$j(document).ready(function() {
-    // Set up the dialog
-    $dialog = $j('<div></div>')
-        .dialog({
-            autoOpen: false,
-            width: 450
-        });
+		$j(document).ready(function() {
+		    // Set up the dialog
+		    $dialog = $j('<div></div>')
+		        .dialog({
+		            autoOpen: false,
+		            width: 450
+		        });
 
-    // Kick things off by doing a describe on Account...        
-    $j('#prompt').html(ajaxgif+" loading metadata...");
-    client.describe('Account', metadataCallback);
-});
-
-function metadataCallback(response){
-    // Using TrimPath Template for now - may switch to jQuery Template at some
-    // point
-    $j('#prompt').html(TrimPath.processDOMTemplate("prompt_jst"
-        , response));
-        
-    // Set up autocomplete
-    $j( "#value" ).autocomplete({
-        source: function( request, response ) {
-            var query = "SELECT Id, Name FROM Account "+
-                "WHERE "+$j("#field").val()+" LIKE '%"+request.term+"%' "+
-                "ORDER BY Name LIMIT 20";
-
-            client.query(query, function( data ) {
-                response( $j.map( data.records, function( record ) {
-                    return {
-                        label: record.Name,
-                        value: record.Id
-                    }
-                }));
-            });
-        },
-        minLength: 2,
-        delay: 1000,
-        select: function( event, ui ) {
-            if ( ui.item != null ) {
-                showAccountDetail(ui.item.value);
-            } else {
-                filterAccounts($j("#field").val(),this.value);
-            }
-            
-            return false;
-        },
-    });
-    
-    $j('#go').click(function(e) {
-        var field = $j("#field").val();
-        var value = $j("#value").val();
-        
-        e.preventDefault();
-        filterAccounts(field,value);
-    });
-    
-    $j('#new').click(function(e) {
-        e.preventDefault();
-        
-        // Just make Trimpath happy
-        var dummy = {};
-        var i;
-        for (i = 0; i < response.fields.length; i++) {
-            dummy[response.fields[i].name] = '';
-        }
-        $dialog.html(TrimPath.processDOMTemplate("edit_jst", dummy));
-        $dialog.find('#action').html('Create').click(function(e) {
-            e.preventDefault();
-            $dialog.dialog('close');
-
-            var fields = {};
-            $dialog.find('input').each(function() {
-                var child = $j(this);
-                if ( child.val().length > 0 ) {
-                    fields[child.attr("name")] = child.val();  
-                }               
-            });
-            
-            $j('#list').html(ajaxgif+" creating account...");
-            
-            client.create('Account', fields, createCallback);
-        });
-        $dialog.dialog('option', 'title', 'New Account');
-        $dialog.dialog('open');
-    });
-    
-    filterAccounts();
-}
-
-function queryCallback(response) {
-    $j('#list').html(TrimPath.processDOMTemplate("accounts_jst"
-        , response));
-        
-    $j('#version').html($j.fn.jquery);
-    $j('#uiversion').html($j.ui.version);
-        
-    $j("#list tr:nth-child(odd)").addClass("odd");
-    
-    $j('#accounts').find('.id')
-        .hover(function() {
-             $j(this).addClass("highlighted");
-           },function(){
-             $j(this).removeClass("highlighted");
-        })
-        .click(function() {
-            showAccountDetail(this.id);
-        });
-}
-
-function detailCallback(response) {
-    if (response.Website != null
-      && !response.Website.startsWith('http://')) {
-        response.Website = 'http://'+response.Website;
-    }
-    $dialog.html(TrimPath.processDOMTemplate("detail_jst"
-        ,response));
-    $dialog.find('#industry').click(function(e) {
-        e.preventDefault();
-        $dialog.dialog('close');
-        filterIndustry($j(this).html());
-    });
-    $dialog.find('#delete').click(function(e) {
-        e.preventDefault();
-        $dialog.dialog('close');
-        $j('#list').html(ajaxgif+" deleting account...");
-        client.del('Account', $dialog.find('#id').val(), deleteCallback);
-    });
-    $dialog.find('#edit').click(function(e) {
-        e.preventDefault();
-        $dialog.html(TrimPath.processDOMTemplate("edit_jst"
-            ,response));
-        $dialog.find('#action').html('Update').click(function(e) {
-            e.preventDefault();
-            $dialog.dialog('close');
-
-            var fields = {};
-            $dialog.find('input').each(function() {
-                var child = $j(this);
-                if ( child.val().length > 0 && child.attr("name") != 'id') {
-                    fields[child.attr("name")] = child.val();  
-                }               
-            });
-
-            $j('#list').html(ajaxgif+" updating account...");
-            
-            client.update('Account', $dialog.find('#id').val(), fields, updateCallback);
-        });
-    });
-}
-
-function createCallback(response) {
-    $j('#list').html('Created '+response.id);
-    
-    setTimeout("filterAccounts()",1000);
-}
-
-function updateCallback(response) {
-    $j('#list').html('Updated');
-    
-    setTimeout("filterAccounts()",1000);
-}
-
-function deleteCallback(response) {
-    $j('#list').html('Deleted');
-    
-    setTimeout("filterAccounts()",1000);
-}
-
-function showAccountDetail(id) {
-    // Show the dialog
-    $dialog.dialog('option', 'title', 'Account Detail');
-    $dialog.dialog('open');
-    $dialog.html(ajaxgif+" retrieving...");
-
-    // Get account details and populate the dialog
-    client.retrieve('Account', id, 'Name,Industry,TickerSymbol,Website'
-        , detailCallback);
-}
-
-function filterAccounts(field, value) {
-    $j('#list').html(ajaxgif+" loading data...");
-
-    var query = ( typeof value !== 'undefined' && value.length > 0 ) 
-        ? "SELECT Id, Name FROM Account WHERE "+field+" LIKE '%"+value
-          +"%' ORDER BY Name LIMIT 20"
-        : "SELECT Id, Name FROM Account ORDER BY Name LIMIT 20";
-        
-    client.query(query, queryCallback);
-}
-        </script>
+		    // Kick things off by doing a describe on Account...        
+		    $j('#prompt').html(ajaxgif+" loading metadata...");
+		    client.describe('Account', metadataCallback);
+		});
+		</script>
     </head>
     <body>
         <div class="ui-widget" id="main">
@@ -276,7 +79,8 @@ function filterAccounts(field, value) {
             <div id="list">
             </div>
         </div>
-            <textarea id="prompt_jst" style="display:none;">
+
+        <textarea id="prompt_jst" style="display:none;">
             <form>
                 <h3 style="display:inline;">Filter on</h3>
                 <select id="field">
@@ -301,7 +105,7 @@ function filterAccounts(field, value) {
                 {/for}
             </table>
             <br/>
-            <a href="https://login.salesforce.com/secur/logout.jsp" id="logout">Logout</a>
+			<a href="#" id="logout">Logout</a>
             <p>
                 <i>Running jQuery <span id="version">0.0.0</span>, jQuery UI <span id="uiversion">0.0.0</span></i>
             </p>
