Added persistent storage of refresh token to the PhoneGap sample app, which necessitated changes in forcetk.js, which rippled into the other apps. Changes are minor - you just need to call setSessionToken() after constructing the client.

--- a/example.page
+++ b/example.page
@@ -51,8 +51,9 @@ Sample Visualforce page for Force.com JavaScript REST Toolkit
 		// Get a reference to jQuery that we can work with
 		$j = jQuery.noConflict();
 
-		// Get an instance of the REST API client
-		var client = new forcetk.Client('{!$Api.Session_ID}');
+		// Get an instance of the REST API client and set the session ID
+		var client = new forcetk.Client();
+		client.setSessionToken('{!$Api.Session_ID}');
 
 		var ajaxgif = "<img src='{!URLFOR($Resource.sample, '/ajax.gif')}' />";
 
