--- a/mobile.page
+++ b/mobile.page
@@ -40,28 +40,22 @@ an HTML5 mobile app using jQuery Mobile
 <title>Accounts</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!--
-    For development, you may want to load jQuery/jQuery Mobile from their CDN. 
+    You must download jQuery and jQuery Mobile and put them in a
+    static resource bundle like this to be able to correctly control ordering
+    of JS includes.
 -->
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.css" />
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.js"></script>
-<!--
-    Alternatively, you could download jQuery and jQuery Mobile, and put them in a
-    static resource bundle like this. Don't forget the images for the CSS!
-<apex:stylesheet value="{!URLFOR($Resource.static, '/mobile/jquery.mobile-1.0a4.min.css')}"  />
-<apex:includeScript value="{!URLFOR($Resource.static, '/jquery-1.5.2.min.js')}"  />
-<apex:includeScript value="{!URLFOR($Resource.static, '/mobile/jquery.mobile-1.0a4.min.js')}"  />
--->
-<apex:includeScript 
- value="{!URLFOR($Resource.sample, 'forcetk.js')}"  />
-<apex:includeScript 
- value="{!URLFOR($Resource.sample, 'mobileapp.js')}"  />
+<apex:stylesheet value="{!URLFOR($Resource.static, 'static/jquery.mobile-1.0a4.min.css')}"  />
+<apex:includeScript value="{!URLFOR($Resource.static, 'static/jquery-1.5.2.min.js')}"  />
+<apex:includeScript value="{!URLFOR($Resource.static, 'static/jquery.mobile-1.0a4.min.js')}"  />
+<apex:includeScript value="{!URLFOR($Resource.sample, 'forcetk.js')}"  />
+<apex:includeScript value="{!URLFOR($Resource.sample, 'mobileapp.js')}"  />
 <script type="application/javascript">
 // Get a reference to jQuery that we can work with
 $j = jQuery.noConflict();
 
-// Get an instance of the REST API client
-var client = new forcetk.Client('{!$Api.Session_ID}');
+// Get an instance of the REST API client and set the session ID
+var client = new forcetk.Client();
+client.setSessionToken('{!$Api.Session_ID}');
 
 // Kick things off...
 $j(document).ready(function(){
