--- a/RemoteTK.component
+++ b/RemoteTK.component
@@ -32,15 +32,9 @@ if (remotetk === undefined) {
 }
 
 if (remotetk.Client === undefined) {
-    function unescapeHTML(input) {
-        var y = document.createElement('textarea');
-        y.innerHTML = input;
-        return y.value;
-    }
-    
     function handleResult(result, callback, error, nullok) {
         if (result) {
-            result = JSON.parse(unescapeHTML(result));
+            result = JSON.parse(result);
             if ( Array.isArray(result) && result[0].message && result[0].errorCode ) {
                 if ( typeof error === 'function' ) {
                     error(result);
@@ -74,6 +68,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.describe = function(objtype, callback, error) {
         RemoteTKController.describe(objtype, function(result){
             handleResult(result, callback, error);
+        }, { 
+            escape: false
         });
     }
         
@@ -89,6 +85,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.create = function(objtype, fields, callback, error) {
         RemoteTKController.create(objtype, JSON.stringify(fields), function(result){
             handleResult(result, callback, error);
+        }, { 
+            escape: false
         });
     }
         
@@ -104,6 +102,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.retrieve = function(objtype, id, fieldlist, callback, error) {
         RemoteTKController.retrieve(objtype, id, fieldlist, function(result){
             handleResult(result, callback, error);
+        }, { 
+            escape: false
         });
     }
     
@@ -123,6 +123,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.upsert = function(objtype, externalIdField, externalId, fields, callback, error) {
         RemoteTKController.upser(objtype, externalIdField, externalId, JSON.stringify(fields), function(result){
             handleResult(result, callback, error, true);
+        }, { 
+                escape: false
         });
     }
     */
@@ -140,6 +142,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.update = function(objtype, id, fields, callback, error) {
         RemoteTKController.updat(objtype, id, JSON.stringify(fields), function(result){
             handleResult(result, callback, error, true);
+        }, { 
+            escape: false
         });
     }
 
@@ -154,6 +158,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.del = function(objtype, id, callback, error) {
         RemoteTKController.del(objtype, id, function(result){
             handleResult(result, callback, error, true);
+        }, { 
+            escape: false
         });
     }
 
@@ -167,6 +173,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.query = function(soql, callback, error) {
         RemoteTKController.query(soql, function(result){
             handleResult(result, callback, error);
+        }, { 
+            escape: false
         });
     }        
 
@@ -180,6 +188,8 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.search = function(sosl, callback, error) {
         RemoteTKController.search(sosl, function(result){
             handleResult(result, callback, error);
+        }, { 
+            escape: false
         });
     }
 }
