Improve compatiblity of RemoteTK with ForceTK
Changes to allow RemoteTK to be used as a drop-in replacement for ForceTK:
Add setSessionToken, setRefreshToken, and setUserAgentString noop functions.

Return referenceTo attribute with describe responses.

Return totalSize and done attributes with query responses.

--- a/RemoteTK.component
+++ b/RemoteTK.component
@@ -57,6 +57,12 @@ if (remotetk.Client === undefined) {
      */
     remotetk.Client = function(){
     }
+
+    /** NOOP: for compatibility with forcetk
+    */
+    remotetk.Client.prototype.setSessionToken = function() {}
+    remotetk.Client.prototype.setRefreshToken = function() {}
+    remotetk.Client.prototype.setUserAgentString = function() {}
         
     /*
      * Completely describes the individual metadata at all levels for the 
