--- a/RemoteTK.component
+++ b/RemoteTK.component
@@ -83,7 +83,7 @@ if (remotetk.Client === undefined) {
      * Creates a new record of the given type.
      * @param objtype object type; e.g. "Account"
      * @param fields an object containing initial field names and values for 
-     *               the record, e.g. {:Name "salesforce.com", :TickerSymbol 
+     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
      *               "CRM"}
      * @param callback function to which response will be passed
      * @param [error=null] function to which jqXHR will be passed in case of error
@@ -113,19 +113,18 @@ if (remotetk.Client === undefined) {
         });
     }
     
-    /* NOT YET IMPLEMENTED!!!
+    /* 
      * Upsert - creates or updates record of the given type, based on the 
      * given external Id.
      * @param objtype object type; e.g. "Account"
      * @param externalIdField external ID field name; e.g. "accountMaster__c"
      * @param externalId the record's external ID value
      * @param fields an object containing field names and values for 
-     *               the record, e.g. {:Name "salesforce.com", :TickerSymbol 
+     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
      *               "CRM"}
      * @param callback function to which response will be passed
      * @param [error=null] function to which jqXHR will be passed in case of error
      */
-    /*
     remotetk.Client.prototype.upsert = function(objtype, externalIdField, externalId, fields, callback, error) {
         Visualforce.remoting.Manager.invokeAction('$RemoteAction.RemoteTKController.upser', objtype, externalIdField, externalId, JSON.stringify(fields), function(result){
             handleResult(result, callback, error, true);
@@ -133,14 +132,13 @@ if (remotetk.Client === undefined) {
                 escape: false
         });
     }
-    */
         
     /*
      * Updates field values on a record of the given type.
      * @param objtype object type; e.g. "Account"
      * @param id the record's object ID
      * @param fields an object containing initial field names and values for 
-     *               the record, e.g. {:Name "salesforce.com", :TickerSymbol 
+     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
      *               "CRM"}
      * @param callback function to which response will be passed
      * @param [error=null] function to which jqXHR will be passed in case of error
