--- a/RemoteTK.component
+++ b/RemoteTK.component
@@ -65,18 +65,18 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.setUserAgentString = function() {}
         
     /*
-     * Completely describes the individual metadata at all levels for the 
-     * specified object.
-     * @param objtype object type; e.g. "Account"
+     * Return the id of a cloned object for the given sobject id.
+     * @param id sobject id
      * @param callback function to which response will be passed
      * @param [error=null] function to which jqXHR will be passed in case of error
      */
-    remotetk.Client.prototype.describe = function(objtype, callback, error) {
-        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.describe}', objtype, function(result){
-            handleResult(result, callback, error);
-        }, { 
-            escape: false
-        });
+    remotetk.Client.prototype.clone = function(id, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.sObjectKlone}', 
+            id, function(result){
+                handleResult(result, callback, error);
+            }, { 
+                escape: false
+            });
     }
         
     /*
@@ -91,61 +91,6 @@ if (remotetk.Client === undefined) {
     remotetk.Client.prototype.create = function(objtype, fields, callback, error) {
         Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.create}', objtype, JSON.stringify(fields), function(result){
             handleResult(result, callback, error);
-        }, { 
-            escape: false
-        });
-    }
-        
-    /*
-     * Retrieves field values for a record of the given type.
-     * @param objtype object type; e.g. "Account"
-     * @param id the record's object ID
-     * @param [fields=null] optional comma-separated list of fields for which 
-     *               to return values; e.g. Name,Industry,TickerSymbol
-     * @param callback function to which response will be passed
-     * @param [error=null] function to which jqXHR will be passed in case of error
-     */
-    remotetk.Client.prototype.retrieve = function(objtype, id, fieldlist, callback, error) {
-        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.retrieve}', objtype, id, fieldlist, function(result){
-            handleResult(result, callback, error);
-        }, { 
-            escape: false
-        });
-    }
-    
-    /* 
-     * Upsert - creates or updates record of the given type, based on the 
-     * given external Id.
-     * @param objtype object type; e.g. "Account"
-     * @param externalIdField external ID field name; e.g. "accountMaster__c"
-     * @param externalId the record's external ID value
-     * @param fields an object containing field names and values for 
-     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
-     *               "CRM"}
-     * @param callback function to which response will be passed
-     * @param [error=null] function to which jqXHR will be passed in case of error
-     */
-    remotetk.Client.prototype.upsert = function(objtype, externalIdField, externalId, fields, callback, error) {
-        Visualforce.remoting.Manager.invokeAction('$RemoteAction.RemoteTKController.upser', objtype, externalIdField, externalId, JSON.stringify(fields), function(result){
-            handleResult(result, callback, error, true);
-        }, { 
-                escape: false
-        });
-    }
-        
-    /*
-     * Updates field values on a record of the given type.
-     * @param objtype object type; e.g. "Account"
-     * @param id the record's object ID
-     * @param fields an object containing initial field names and values for 
-     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
-     *               "CRM"}
-     * @param callback function to which response will be passed
-     * @param [error=null] function to which jqXHR will be passed in case of error
-     */
-    remotetk.Client.prototype.update = function(objtype, id, fields, callback, error) {
-        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.updat}', objtype, id, JSON.stringify(fields), function(result){
-            handleResult(result, callback, error, true);
         }, { 
             escape: false
         });
@@ -168,6 +113,83 @@ if (remotetk.Client === undefined) {
     }
 
     /*
+     * Completely describes the individual metadata at all levels for the 
+     * specified object.
+     * @param objtype object type; e.g. "Account"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.describe = function(objtype, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.describe}', objtype, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+
+    /*
+     * Completely describes the individual metadata for the 
+     * specified fieldset
+     * @param objtype object type; e.g. "Account"
+     * @param fieldSetName field set name; e.g. "details"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.describeFieldSet = function(objtype, fieldSetName, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.describeFieldSet}', objtype, fieldSetName, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+
+    /*
+     * Completely describes the individual metadata for the 
+     * specified fieldset
+     * @param objtype object type; e.g. "Account"
+     * @param fieldName picklist field name; e.g. "details"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.describePicklistValues = function(objtype, fieldName, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.getPicklistValues}', objtype, fieldName, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+
+    /*
+     * Return the sObject api name for the given sobject id.
+     * @param id sobject id
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.getObjectType = function(id, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.getObjType}', 
+            id, function(result){
+                handleResult(result, callback, error);
+            }, { 
+                escape: false
+            });
+    }
+
+    /*
+     * Return the query results as a list of objects suitable for select2 consumption
+     * @param soql a string containing the query to execute - e.g. "SELECT Id, 
+     *             Name from Account ORDER BY Name LIMIT 20"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.getQueryResultsAsSelect2Data = function(soql, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.getQueryResultsAsSelect2Data}', soql, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+
+    /*
      * Executes the specified SOQL query.
      * @param soql a string containing the query to execute - e.g. "SELECT Id, 
      *             Name from Account ORDER BY Name LIMIT 20"
@@ -180,7 +202,40 @@ if (remotetk.Client === undefined) {
         }, { 
             escape: false
         });
-    }        
+    } 
+
+    /*
+     * Build a query from a field set given an object id, and the fieldset name 
+     * returning the query results
+     * @param objId ObjectId to query for fieldset and results.
+     * @param fieldSetName field set name; e.g. "details"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.queryFromFieldset = function(objId, fieldSetName, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.queryFromFieldSet}', objId, fieldSetName, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+ 
+    /*
+     * Retrieves field values for a record of the given type.
+     * @param objtype object type; e.g. "Account"
+     * @param id the record's object ID
+     * @param [fields=null] optional comma-separated list of fields for which 
+     *               to return values; e.g. Name,Industry,TickerSymbol
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.retrieve = function(objtype, id, fieldlist, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.retrieve}', objtype, id, fieldlist, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
 
     /*
      * Executes the specified SOSL search.
@@ -196,6 +251,61 @@ if (remotetk.Client === undefined) {
             escape: false
         });
     }
+
+    /*
+     * Build a querystring from a field set given an object type, and the fieldset name 
+     * returning a JS object containing selectClause and fromClause properties.
+     * @param objtype object type; e.g. "Account"
+     * @param fieldSetName field set name; e.g. "details"
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.soqlFromFieldSet = function(objtype, fieldSetName, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.soqlFromFieldSet}', objtype, fieldSetName, function(result){
+            handleResult(result, callback, error);
+        }, { 
+            escape: false
+        });
+    }
+
+    /*
+     * Updates field values on a record of the given type.
+     * @param objtype object type; e.g. "Account"
+     * @param id the record's object ID
+     * @param fields an object containing initial field names and values for 
+     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
+     *               "CRM"}
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.update = function(objtype, id, fields, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('{!$RemoteAction.RemoteTKController.updat}', objtype, id, JSON.stringify(fields), function(result){
+            handleResult(result, callback, error, true);
+        }, { 
+            escape: false
+        });
+    }  
+    
+    /* 
+     * Upsert - creates or updates record of the given type, based on the 
+     * given external Id.
+     * @param objtype object type; e.g. "Account"
+     * @param externalIdField external ID field name; e.g. "accountMaster__c"
+     * @param externalId the record's external ID value
+     * @param fields an object containing field names and values for 
+     *               the record, e.g. {Name: "salesforce.com", TickerSymbol: 
+     *               "CRM"}
+     * @param callback function to which response will be passed
+     * @param [error=null] function to which jqXHR will be passed in case of error
+     */
+    remotetk.Client.prototype.upsert = function(objtype, externalIdField, externalId, fields, callback, error) {
+        Visualforce.remoting.Manager.invokeAction('$RemoteAction.RemoteTKController.upser', objtype, externalIdField, externalId, JSON.stringify(fields), function(result){
+            handleResult(result, callback, error, true);
+        }, { 
+                escape: false
+        });
+    }
+
 }
     </script>
 </apex:component>
