--- a/example.page
+++ b/example.page
@@ -42,33 +42,35 @@ Sample Visualforce page for Force.com JavaScript REST Toolkit
         <apex:includeScript value="{!URLFOR($Resource.static, '/static/template.js')}"  />
         <apex:includeScript value="{!URLFOR($Resource.sample, '/forcetk.js')}"  />
         <apex:includeScript value="{!URLFOR($Resource.sample, '/app.js')}"  />      
-  		<script type="text/javascript">
-		/*
-		 * This is the Visualforce-specific JavaScript code for our sample app.
-		 * It must go in the VF page so that merge variables are processed.
-		 */
+        <script type="text/javascript">
+        /*
+         * This is the Visualforce-specific JavaScript code for our sample app.
+         * It must go in the VF page so that merge variables are processed.
+         */
+        
+        // Get an instance of the REST API client and set the session ID
+        var client = new forcetk.Client();
+        client.setSessionToken('{!$Api.Session_ID}');
 
-		// Get an instance of the REST API client and set the session ID
-		var client = new forcetk.Client();
-		client.setSessionToken('{!$Api.Session_ID}');
+        var ajaxgif = "<img src='{!URLFOR($Resource.sample, '/ajax.gif')}' />";
 
-		var ajaxgif = "<img src='{!URLFOR($Resource.sample, '/ajax.gif')}' />";
+        var $dialog = null;
 
-		var $dialog = null;
+        $(document).ready(function() {
+            // Set up the dialog
+            $dialog = $('<div></div>')
+                .dialog({
+                    autoOpen: false,
+                    width: 450
+                });
 
-		$(document).ready(function() {
-		    // Set up the dialog
-		    $dialog = $('<div></div>')
-		        .dialog({
-		            autoOpen: false,
-		            width: 450
-		        });
-
-		    // Kick things off by doing a describe on Account...        
-		    $('#prompt').html(ajaxgif+" loading metadata...");
-		    client.describe('Account', metadataCallback);
-		});
-		</script>
+            // Kick things off by doing a describe on Account...        
+            $('#prompt').html(ajaxgif+" loading metadata...");
+            client.describe('Account')
+            .then(metadataCallback)
+            .catch(errorCallback);
+        });
+        </script>
     </head>
     <body>
         <div class="ui-widget" id="main">
@@ -103,7 +105,7 @@ Sample Visualforce page for Force.com JavaScript REST Toolkit
                 {/for}
             </table>
             <br/>
-			<a href="#" id="logout">Logout</a>
+            <a href="#" id="logout">Logout</a>
             <p>
                 <i>Running jQuery <span id="version">0.0.0</span>, jQuery UI <span id="uiversion">0.0.0</span></i>
             </p>
